--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ python_functions = test_*
 
 # Test paths
 testpaths = test
+pythonpath = .
 
 # Output options
 # Note: Coverage options require pytest-cov to be installed
